many important cleanings-up of logic